--- a/d-spring/springMVC/a-springMVC-example/src/main/webapp/WEB-INF/templates/index.html
+++ b/d-spring/springMVC/a-springMVC-example/src/main/webapp/WEB-INF/templates/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!--使用 thymeleaf 语法的命名空间，要使用其语法要设置该命名空间-->
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
