--- a/d-spring/springMVC/c-springMVC-domain/src/main/webapp/WEB-INF/templates/index.html
+++ b/d-spring/springMVC/c-springMVC-domain/src/main/webapp/WEB-INF/templates/index.html
@@ -15,6 +15,7 @@
     <a th:href="@{/testSessionServletAPI}">testSessionServletAPI => session domain</a><br>
 
     <a th:href="@{/testApplication}">testApplication => application domain</a><br>
+    <a th:href="@{/testThymeleafViewa}">testThymeleafViewa</a>
 
 
 
